--- a/PCA/PCA/Views/Budget/Index.cshtml
+++ b/PCA/PCA/Views/Budget/Index.cshtml
@@ -12,56 +12,72 @@
 }
 @section scripts
 {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
     <script src="~/Scripts/DataTablesCustomization.js"></script>
     <script src="~/Scripts/PCA.js"></script>
+    <script src="~/Scripts/Budget.js"></script>
 }
-<div class="panel panel-default">
-    <div class="panel-heading">
+<div class="col-xs-12 col-md-7">
+    <div class="panel panel-default col-xs-12">
+        <div class="panel-heading">
 
-        <h4>Budget Summary</h4>
-    </div>
-    <div class="panel-body">
-        <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-        <hr />
-        Total Budgeted: @string.Format("{0:C}", @ViewBag.BudgetSummaryTotal)
-        <br />
-    </div>
-</div>
-
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4>Select Phase:</h4>
-    </div>
-    <div class="panel-body">
-        <a href="/Budget/Create" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Create Budget Items</a>
-        <hr />
-
-        <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
-            <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span> View</a>
+            <h4>Budget Summary</h4>
         </div>
+        <div class="panel-body">
+            <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+            <hr />
+            Total Budgeted: @string.Format("{0:C}", @ViewBag.BudgetSummaryTotal)
+            <br />
+        </div>
+    </div>
 
-        <table id="table_id" class="display">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Total Budget</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var phase in Model)
-            {
-                    <tr class="LinkButton" data-link-button-1="/Budget/Phase/@phase.PhaseId">
-                        <td>@phase.PhaseNumber</td>
-                        <td>@phase.PhaseName</td>
-                        <td>@string.Format("{0:C}", @phase.TotalCost)</td>
+
+    <div class="panel panel-default col-xs-12">
+        <div class="panel-heading">
+            <h4>Select Phase:</h4>
+        </div>
+        <div class="panel-body">
+            <a href="/Budget/Create" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Create Budget Items</a>
+            <hr />
+
+            <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
+                <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> View</a>
+            </div>
+
+            <table id="table_id" class="display">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Total Budget</th>
                     </tr>
-                }
+                </thead>
+                <tbody>
+                    @foreach (var phase in Model)
+            {
+                        <tr class="LinkButton" data-link-button-1="/Budget/Phase/@phase.PhaseId">
+                            <td>@phase.PhaseNumber</td>
+                            <td>@phase.PhaseName</td>
+                            <td>@string.Format("{0:C}", @phase.TotalCost)</td>
+                        </tr>
+                    }
 
 
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+<div class="col-xs-0 col-md-1"></div> 
 
+<div class="col-xs-12 col-md-4">
+    <div class="panel panel-default col-xs-12">
+        <div class="panel-heading"><h4>Analytics</h4></div>
+        <div class="panel-body">
+            <canvas id="budgetCanvas" width="400" height="400">
+
+            </canvas>
+
+        </div>
+    </div>
+</div>
