--- a/PCA/PCA/Content/Layout.css
+++ b/PCA/PCA/Content/Layout.css
@@ -88,7 +88,7 @@
 }
 
 #Body{
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .sideNavItemSelected{
@@ -138,4 +138,10 @@
 
 .DetailItem{
     text-align: center;
+}
+
+#BodyContainer{
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 0px;
 }
