--- a/PCA/PCA/Views/Budget/Index.cshtml
+++ b/PCA/PCA/Views/Budget/Index.cshtml
@@ -68,16 +68,13 @@
         </div>
     </div>
 </div>
-<div class="col-xs-0 col-md-1"></div> 
+<div class="col-xs-0 col-md-1"></div>
 
-<div class="col-xs-12 col-md-4">
-    <div class="panel panel-default col-xs-12">
-        <div class="panel-heading"><h4>Analytics</h4></div>
-        <div class="panel-body">
-            <canvas id="budgetCanvas" width="400" height="400">
-
-            </canvas>
-
-        </div>
+<div class="panel panel-default col-xs-12 col-md-4">
+    <div class="panel-heading">
+        <h4>Analytics</h4>
+    </div>
+    <div class="panel-body">
+        <canvas id="budgetCanvas" width="400" height="400"></canvas>
     </div>
 </div>
