--- a/PCA/PCA/Views/DailyReport/WorkEdit.cshtml
+++ b/PCA/PCA/Views/DailyReport/WorkEdit.cshtml
@@ -19,7 +19,7 @@
         @Html.HiddenFor(model => model.WorkItemId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DailyReportId, "DailyReportId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DailyReportId, "DailyReport", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DailyReportId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DailyReportId, "", new { @class = "text-danger" })
@@ -27,7 +27,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ContractorId, "ContractorId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ContractorId, "Contractor", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ContractorId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ContractorId, "", new { @class = "text-danger" })
