--- a/PCA/PCA/Content/LayoutCurrent.css
+++ b/PCA/PCA/Content/LayoutCurrent.css
@@ -2,18 +2,11 @@
     padding-top: 0px;
     margin-top: 0px;
     background-repeat: repeat;
-    background-image: url('Images/cork-wallet.png');*
-    background: #ddd;
+    background-image: url('Images/grey_wash_wall.png');
 }
 
 #navbar {
     background-color: white;
-    /*box-shadow: inset 0px -3px 5px #666;
-    padding-bottom: 8px;*/
-}
-
-#rowLogo{
-   
 }
 
 #Navigation{
@@ -21,12 +14,10 @@
     border-bottom-width: 3px;
     border-style: solid;
     border-top-color: #85c9f9;
-    border-bottom-color: #ddd;
+    border-bottom-color: #1796F3;
     min-height: 30px;
     background-color: #064979;
-    box-shadow: inset 0px -3px 5px #222;
-
-    /*box-shadow: 0px 10px 15px #333;*/
+    box-shadow: 0px 10px 15px #333;
 }
 
 
@@ -57,8 +48,7 @@
 }
 
 .NavItemSelected {
-    
-    
+    background-color: #1796F3;
 }
 
 #CurrentUserText {
@@ -102,16 +92,12 @@
 }
 
 .sideNavItemSelected{
-    background-color: #ddd;
-    color:#222;
-    font-weight: 500;
-    background-image: url('Images/cork-wallet.png');
-    
+    background-color: #1796F3;
 }
 
 .panel {
     padding:0px;
-    box-shadow: 10px 10px 3px #999;
+    box-shadow: 5px 5px 15px #333;
 
 }
 
