--- a/PCA/PCA/Views/Budget/Details.cshtml
+++ b/PCA/PCA/Views/Budget/Details.cshtml
@@ -1,15 +1,17 @@
 ﻿@model PCA.Models.Budget
 
 @{
+    ViewBag.PanelTitle = "Budget Item Detail";
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
+}
+@section sideNavBudgets
+{
+    sideNavItemSelected
 }
 
-
-<h2>Details</h2>
-
 <div>
-    <h4>Budget</h4>
+    <a href="/Budget/Phase/@Model.PhaseId" class="btn btn-default">Back</a>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -94,7 +96,4 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.BudgetId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
