--- a/PCA/PCA/Views/DailyReport/Create.cshtml
+++ b/PCA/PCA/Views/DailyReport/Create.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Summary, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Summary, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Summary, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Summary, "", new { @class = "text-danger" })
             </div>
         </div>
