--- a/PCA/PCA/Views/DailyReport/CreateWork.cshtml
+++ b/PCA/PCA/Views/DailyReport/CreateWork.cshtml
@@ -32,13 +32,13 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Performance, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Performance, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.Performance, "--- Select Performance ---", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Performance, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ContractorId, "ContractorId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ContractorId, "Contractor", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ContractorId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ContractorId, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MenWorked, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MenWorked, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.MenWorked, new {htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MenWorked, "", new { @class = "text-danger" })
             </div>
         </div>
