--- a/PCA/PCA/Views/Invoice/Index.cshtml
+++ b/PCA/PCA/Views/Invoice/Index.cshtml
@@ -13,48 +13,58 @@
     <script src="~/Scripts/PCA.js"></script>
 }
 
+<div class="col-xs-12 col-md-7">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4>Invoices</h4>
+        </div>
+        <div class="panel-body">
 
-<div class="panel panel-default">
+            <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+            <a href="/Invoice/Create" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Create Invoice</a>
+            <hr />
+
+            <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
+                <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span> Info</a>
+                <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+                <a id="LinkButton3" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                <a id="LinkButton4" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-picture"></span> View</a>
+            </div>
+
+            <table id="table_id" class="display">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Total</th>
+                        <th>Date</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var inv in Model)
+            {
+                        <tr class="LinkButton" data-link-button-1="/Invoice/Details/@inv.InvoiceId" data-link-button-2="/Invoice/Edit/@inv.InvoiceId"
+                            data-link-button-3="/Invoice/Delete/@inv.InvoiceId" data-link-button-4="/Invoice/ViewAttachment/@inv.InvoiceId">
+                            <td>@inv.InvoiceId</td>
+                            <td>@string.Format("{0:C}", @inv.TotalAmount)</td>
+                            <td>@inv.DateOfInvoice</td>
+                            <td>@inv.Status</td>
+                        </tr>
+                    }
+
+
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</div>
+
+<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
     <div class="panel-heading">
-        <h4>Invoices</h4>
+        <h4>Analytics</h4>
     </div>
     <div class="panel-body">
-
-        <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-        <a href="/Invoice/Create" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Create Invoice</a>
-        <hr />
-
-        <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
-            <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span> Info</a>
-            <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
-            <a id="LinkButton3" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
-            <a id="LinkButton4" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-picture"></span> View</a>
-        </div>
-
-        <table id="table_id" class="display">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Total</th>
-                    <th>Date</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var inv in Model)
-            {
-                    <tr class="LinkButton" data-link-button-1="/Invoice/Details/@inv.InvoiceId" data-link-button-2="/Invoice/Edit/@inv.InvoiceId"
-                             data-link-button-3="/Invoice/Delete/@inv.InvoiceId" data-link-button-4="/Invoice/ViewAttachment/@inv.InvoiceId">
-                        <td>@inv.InvoiceId</td>
-                        <td>@string.Format("{0:C}", @inv.TotalAmount)</td>
-                        <td>@inv.DateOfInvoice</td>
-                        <td>@inv.Status</td>
-                    </tr>
-                }
-
-
-            </tbody>
-        </table>
-        
+        <canvas id="invoiceCanvas" width="400" height="400"></canvas>
     </div>
 </div>
