--- a/PCA/PCA/Views/Shared/_Layouttest.cshtml
+++ b/PCA/PCA/Views/Shared/_Layouttest.cshtml
@@ -17,7 +17,7 @@
 <body>
     <!-- Header Bar -->
     <div class="container-fluid">
-        <div id="rowLogo" class="row">
+        <div class="row">
             <div id="navbar" class="col-xs-12">
                 <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
                     <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
@@ -27,35 +27,38 @@
         <!-- End Header Bar -->
         <!-- Navigation -->
         <div class="row">
-            <div id="Navigation" class="col-xs-12">
-                <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
-                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">DASHBOARD</span></a>
-                    <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">CONTRACTS</span></a>
-                    <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">BUDGETS</span></a>
-                    <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">INVOICE</span></a>
-                    <a href="/DailyReport/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">DAILY REPORT</span></a>
-                    <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">REPORTS</span></a>
+            <div class="panel panel-default col-xs-10">
+                <div class="panel-heading">
+                    <div id="Navigation" class="col-xs-12">
+                        <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
+                            <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">DASHBOARD</span></a>
+                            <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">CONTRACTS</span></a>
+                            <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">BUDGETS</span></a>
+                            <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">INVOICE</span></a>
+                            <a href="/DailyReport/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">DAILY REPORT</span></a>
+                            <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">REPORTS</span></a>
+                        </div>
+
+                        <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
+                            <a href="/"><p id="CurrentUserText">Hello, <u>USER</u>. Log Out</p></a>
+                        </div>
+                    </div>
                 </div>
+                <div class="panel-body">
 
-                <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
-                    <a href="/"><p id="CurrentUserText">Hello, <u>USER</u>. Log Out</p></a>
+                <div id="BodyContainer" class="container-fluid">
+                    <div class="row">
+                        <div id="Body" class="col-xs-12">
+                            @RenderBody()
+                        </div>
+                    </div>
+
+                    <!-- End Body -->
+                    <!-- Footer -->
+                    <div class="row">
+                        <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
+                    </div>
                 </div>
-            </div>
-
-
-        </div>
-
-        <div id="BodyContainer" class="container-fluid">
-            <div class="row">
-                <div id="Body" class="col-xs-12">
-                    @RenderBody()
-                </div>
-            </div>
-
-            <!-- End Body -->
-            <!-- Footer -->
-            <div class="row">
-                <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
             </div>
         </div>
 
