--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -7,5 +7,90 @@
 {
     sideNavItemSelected
 }
-<h2>Index</h2>
 
+<div class="panel panel-default col-xs-12 col-md-7">
+    <div class="panel-heading col-xs-12">
+        <h4>Work Flow</h4>
+    </div>
+    <div class="panel-body col-xs-12">
+
+        <div class="col-xs-12">
+            <p>ITEM SELECT GOES HERE...</p>
+        </div>
+
+
+        <div class="col-xs-12">
+            <h5>Budgets</h5>
+            <table class="table table-bordered workflowTable">
+                <tbody>
+                    <tr>
+                        <td>PM REVIEW</td>
+                        <td>APPROVE</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-xs-12">
+            <h5>Contracts</h5>
+            <table class="table table-bordered workflowTable">
+                <tbody>
+                    <tr>
+                        <td>CONTRACTS</td>
+                        <td>PM REVIEW</td>
+                        <td>APPROVE</td>
+                        <td>ROUTING</td>
+                        <td>POSTING</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-xs-12">
+            <h5>Invoices</h5>
+            <table class="table table-bordered workflowTable">
+                <tbody>
+                    <tr>
+                        <td>RECONCILE</td>
+                        <td>INVOICE POST</td>
+                        <td>PM REVIEW</td>
+                        <td>APPROVE</td>
+                        <td>LIEN RELEASE</td>
+                        <td>PAID POST</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-xs-12">
+            <h5>Daily Reports</h5>
+            <table class="table table-bordered workflowTable">
+                <tbody>
+                    <tr>
+                        <td>FIELD REVIEW</td>
+                        <td>APPROVE</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        </div>
+</div>
+
+<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
+    <div class="panel-heading">
+        <h4>Links</h4>
+    </div>
+    <div class="panel-body">
+
+    </div>
+</div>
+
+<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
+    <div class="panel-heading">
+        <h4>Change Log</h4>
+    </div>
+    <div class="panel-body">
+
+    </div>
+</div>
