--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -31,7 +31,7 @@
         </div>
 
         <div id="TableWrapper" class="col-xs-12">
-            <table id="Sort1" class="display col-xs-12 Sort1">
+            <table id="Sort1" class="display col-xs-12 Sort1 table table-striped">
                 <thead>
                     <tr>
                         <th>Date</th>
