--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -14,13 +14,33 @@
     <script src="~/Scripts/PCA.js"></script>
     <script src="~/Scripts/DailyReport.js"></script>
 }
- <div class="panel panel-default col-xs-12 col-md-7">
+<div class="panel panel-default col-xs-12 col-md-7">
     <div class="panel-heading col-xs-12">
-        <h4>Daily Reports</h4>
+        <div class="headingElements col-xs-12">
+            <div class="col-xs-4">
+                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-xs">
+                    <span class="glyphicon glyphicon-menu-left"></span> Back
+                </a>
+            </div>
+            <span class="headingText col-xs-4">Daily Reports</span>
+            <div class="headingRight col-xs-4">
+                <a href="/DailyReport/Create" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-plus"></span> New</a>
+            </div>
+        </div>
     </div>
     <div class="panel-body col-xs-12">
-        <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-        <a href="/DailyReport/Create" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Create New</a>
+        <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle btn-sm" type="button" id="dailyReportDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Status: <span id="selection">All</span>
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <li class="dailyReportStatusFilter"><a href="#">All</a></li>
+                <li class="dailyReportStatusFilter"><a href="#">Pending</a></li>
+                <li class="dailyReportStatusFilter"><a href="#">Approved</a></li>
+            </ul>
+        </div>
+
         <hr />
 
         <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
@@ -42,7 +62,7 @@
                 <tbody>
                     @foreach (var report in Model)
                     {
-                        <tr id="@report.DateString"class="LinkButton" data-link-button-1="/DailyReport/Detail/@report.DailyReportId" data-link-button-2="/DailyReport/Edit/@report.DailyReportId"
+                        <tr id="@report.DateString" class="LinkButton" data-link-button-1="/DailyReport/Detail/@report.DailyReportId" data-link-button-2="/DailyReport/Edit/@report.DailyReportId"
                             data-link-button-3="/DailyReport/Delete/@report.DailyReportId" data-link-button-4="/DailyReport/PictureIndex/@report.DailyReportId"
                             data-date="@report.DateString" data-totalHours="@report.TotalHours">
                             <td>@report.DateString</td>
@@ -62,7 +82,7 @@
         <h4>Analytics</h4>
     </div>
     <div class="panel-body">
-        <canvas id="dailyReportCanvas" width="400" height="400" data-weekreport-1="@ViewBag.DailyReportAnalWeekDay1" 
+        <canvas id="dailyReportCanvas" width="400" height="400" data-weekreport-1="@ViewBag.DailyReportAnalWeekDay1"
                 data-weekreport-2="@ViewBag.DailyReportAnalWeekDay2" data-weekreport-3="@ViewBag.DailyReportAnalWeekDay3"
                 data-weekreport-4="@ViewBag.DailyReportAnalWeekDay4" data-weekreport-5="@ViewBag.DailyReportAnalWeekDay5"
                 data-weekreport-6="@ViewBag.DailyReportAnalWeekDay6" data-weekreport-7="@ViewBag.DailyReportAnalWeekDay7"></canvas>
