--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -7,75 +7,72 @@
 {
     sideNavItemSelected
 }
+@section scripts
+{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+    <script src="~/Scripts/DataTablesCustomization.js"></script>
+    <script src="~/Scripts/PCA.js"></script>
+}
 
-<div class="panel panel-default col-xs-12 col-md-7">
-    <div class="panel-heading col-xs-12">
-        <h4>Work Flow</h4>
+<div class="panel panel-default panelShadow col-xs-12 col-md-7">
+    <div class="panel-heading col-xs-12"><span class="heading-1">Work Flow</span>
     </div>
+
     <div class="panel-body col-xs-12">
 
-        <div class="col-xs-12">
-            <p>ITEM SELECT GOES HERE...</p>
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-default">
+                <!-- List group -->
+                <div class="panel-heading">Budgets</div>
+                    <ul class="list-group">
+                        <li class="list-group-item">PM REVIEW<span class="badge">14</span></li>
+                        <li class="list-group-item">APPROVE<span class="badge">14</span></li>
+                    </ul>
+            </div>
         </div>
 
-
-        <div class="col-xs-12">
-            <h5>Budgets</h5>
-            <table class="table table-bordered workflowTable">
-                <tbody>
-                    <tr>
-                        <td>PM REVIEW</td>
-                        <td>APPROVE</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-default">
+                <!-- List group -->
+                <div class="panel-heading">Daily Reports</div>
+                <ul class="list-group">
+                    <li class="list-group-item">FIELD REVIEW<span class="badge">14</span></li>
+                    <li class="list-group-item">APPROVE<span class="badge">14</span></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="col-xs-12">
-            <h5>Contracts</h5>
-            <table class="table table-bordered workflowTable">
-                <tbody>
-                    <tr>
-                        <td>CONTRACTS</td>
-                        <td>PM REVIEW</td>
-                        <td>APPROVE</td>
-                        <td>ROUTING</td>
-                        <td>POSTING</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-default">
+                <!-- List group -->
+                <div class="panel-heading">Contracts</div>
+                <ul class="list-group">
+                    <li class="list-group-item">CONTRACTS<span class="badge">14</span></li>
+                    <li class="list-group-item">PM REVIEW<span class="badge">14</span></li>
+                    <li class="list-group-item">APPROVE<span class="badge">14</span></li>
+                    <li class="list-group-item">ROUTING<span class="badge">14</span></li>
+                    <li class="list-group-item">POSTING<span class="badge">14</span></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="col-xs-12">
-            <h5>Invoices</h5>
-            <table class="table table-bordered workflowTable">
-                <tbody>
-                    <tr>
-                        <td>RECONCILE</td>
-                        <td>INVOICE POST</td>
-                        <td>PM REVIEW</td>
-                        <td>APPROVE</td>
-                        <td>LIEN RELEASE</td>
-                        <td>PAID POST</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-default">
+                <!-- List group -->
+                <div class="panel-heading">Invoices</div>
+                <ul class="list-group">
+                    <li class="list-group-item">RECONCILE<span class="badge">14</span></li>
+                    <li class="list-group-item">POST<span class="badge">14</span></li>
+                    <li class="list-group-item">PM REVIEW<span class="badge">14</span></li>
+                    <li class="list-group-item">APPROVE<span class="badge">14</span></li>
+                    <li class="list-group-item">LIEN RELEASE<span class="badge">14</span></li>
+                    <li class="list-group-item">PAID POST<span class="badge">14</span></li>
+                </ul>
+            </div>
         </div>
-
-        <div class="col-xs-12">
-            <h5>Daily Reports</h5>
-            <table class="table table-bordered workflowTable">
-                <tbody>
-                    <tr>
-                        <td>FIELD REVIEW</td>
-                        <td>APPROVE</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        </div>
+    </div>
 </div>
+
 
 <div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
     <div class="panel-heading">
