--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/Layout.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Cabin" rel="stylesheet">
     @RenderSection("css", false)
 </head>
 <!-- End Head -->
