--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -36,8 +36,8 @@
                 <!-- List group -->
                 <div class="panel-heading">Daily Reports</div>
                 <ul class="list-group">
-                    <li class="list-group-item">FIELD REVIEW<span class="badge">14</span></li>
-                    <li class="list-group-item">APPROVE<span class="badge">14</span></li>
+                    <a href="/DailyReport/"><li class="list-group-item">PENDING<span class="badge">14</span></li></a>
+                    <li class="list-group-item">APPROVED<span class="badge">14</span></li>
                 </ul>
             </div>
         </div>
