--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿<!-- Daily Report Index-->
+<!-- Imports / Dependencies -->
 @model IEnumerable<PCA.ViewModels.DailyReportViewModel>
 @{
     ViewBag.Title = "Index";
@@ -14,21 +15,28 @@
     <script src="~/Scripts/PCA.js"></script>
     <script src="~/Scripts/DailyReport.js"></script>
 }
-<div class="panel panel-default col-xs-12 col-md-7">
+
+<!-- Daily Report Container -->
+<div class="panel panel-default panelShadow col-xs-12 col-md-7">
+    <!-- Daily Report Header -->
     <div class="panel-heading col-xs-12">
         <div class="headingElements col-xs-12">
             <div class="col-xs-4">
-                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-xs">
+                <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm">
                     <span class="glyphicon glyphicon-menu-left"></span> Back
                 </a>
             </div>
             <span class="headingText col-xs-4">Daily Reports</span>
             <div class="headingRight col-xs-4">
-                <a href="/DailyReport/Create" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-plus"></span> New</a>
+                <a href="/DailyReport/Create" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span> New</a>
             </div>
         </div>
     </div>
+
+    <!-- Daily Report Body -->
     <div class="panel-body col-xs-12">
+
+        <!-- Filters -->
         <div class="dropdown">
             <button class="btn btn-default dropdown-toggle btn-sm" type="button" id="dailyReportDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 Status: <span id="selection">All</span>
@@ -43,13 +51,16 @@
 
         <hr />
 
+        <!-- Link Buttons -->
         <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
             <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-road"></span> Work</a>
             <a id="LinkButton2" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
             <a id="LinkButton3" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-trash"></span> Delete</a>
             <a id="LinkButton4" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-picture"></span> Pictures</a>
+            <a id="LinkButton5" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-sort"></span> Workflow</a>
         </div>
 
+        <!-- Daily Report DataTables -->
         <div id="TableWrapper" class="col-xs-12">
             <table id="Sort1" class="display col-xs-12 Sort1 table table-striped">
                 <thead>
@@ -60,10 +71,12 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Daily Reports -->
                     @foreach (var report in Model)
                     {
-                        <tr id="@report.DateString" class="LinkButton" data-link-button-1="/DailyReport/Detail/@report.DailyReportId" data-link-button-2="/DailyReport/Edit/@report.DailyReportId"
+                        <tr id="@report.DateString" class="LinkButton dailyReportRow" data-status="@report.Status" data-link-button-1="/DailyReport/Detail/@report.DailyReportId" data-link-button-2="/DailyReport/Edit/@report.DailyReportId"
                             data-link-button-3="/DailyReport/Delete/@report.DailyReportId" data-link-button-4="/DailyReport/PictureIndex/@report.DailyReportId"
+                            data-link-button-5="/DailyReport/WorkFlow/@report.DailyReportId"
                             data-date="@report.DateString" data-totalHours="@report.TotalHours">
                             <td>@report.DateString</td>
                             <td>@report.Summary</td>
@@ -76,8 +89,8 @@
     </div>
 </div>
 
-
-<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
+<!-- Analytics Panel -->
+<div class="panel panel-default panelShadow col-xs-12 col-md-4 col-md-offset-1">
     <div class="panel-heading">
         <h4>Analytics</h4>
     </div>
