--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -91,13 +91,18 @@
 
 <!-- Analytics Panel -->
 <div class="panel panel-default panelShadow col-xs-12 col-md-4 col-md-offset-1">
-    <div class="panel-heading">
-        <h4>Analytics</h4>
+    <div class="panel-heading col-xs-12">
+        <div class="headingElements col-xs-12">
+            <div class="col-xs-4"></div>
+                <span class="headingText col-xs-4">Data</span>
+            </div>
     </div>
     <div class="panel-body">
-        <canvas id="dailyReportCanvas" width="400" height="400" data-weekreport-1="@ViewBag.DailyReportAnalWeekDay1"
-                data-weekreport-2="@ViewBag.DailyReportAnalWeekDay2" data-weekreport-3="@ViewBag.DailyReportAnalWeekDay3"
-                data-weekreport-4="@ViewBag.DailyReportAnalWeekDay4" data-weekreport-5="@ViewBag.DailyReportAnalWeekDay5"
-                data-weekreport-6="@ViewBag.DailyReportAnalWeekDay6" data-weekreport-7="@ViewBag.DailyReportAnalWeekDay7"></canvas>
+        <div class="col-xs-12 col-md-10 col-md-offset-1">
+            <canvas id="dailyReportCanvas" width="400" height="400" data-weekreport-1="@ViewBag.DailyReportAnalWeekDay1"
+                    data-weekreport-2="@ViewBag.DailyReportAnalWeekDay2" data-weekreport-3="@ViewBag.DailyReportAnalWeekDay3"
+                    data-weekreport-4="@ViewBag.DailyReportAnalWeekDay4" data-weekreport-5="@ViewBag.DailyReportAnalWeekDay5"
+                    data-weekreport-6="@ViewBag.DailyReportAnalWeekDay6" data-weekreport-7="@ViewBag.DailyReportAnalWeekDay7"></canvas>
+        </div>
     </div>
 </div>
