--- a/PCA/PCA/Views/DailyReport/Edit.cshtml
+++ b/PCA/PCA/Views/DailyReport/Edit.cshtml
@@ -5,20 +5,27 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-<a href="/DailyReport/" class="btn btn-default">Back</a>
+@section headerLeft
+{
+    <a href="/DailyReport/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+}
+@section sideNavDailyReport
+{
+    sideNavItemSelected
+}
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    <br /><br /><br />
     <div class="form-horizontal">
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.DailyReportId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.ProjectId, "ProjectId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", @disabled = "disabled" })
                 @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +49,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
