--- a/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
+++ b/PCA/PCA/Views/DailyReport/PictureIndex.cshtml
@@ -12,56 +12,70 @@
     <script src="~/Scripts/DataTablesCustomization.js"></script>
     <script src="~/Scripts/PCA.js"></script>
 }
+<div class="col-xs-12 col-md-8 col-md-offset-2">
+    <div class="panel panel-default panelShadow">
 
-<div class="panel panel-default">
-    <div class="panel-heading"><h4>Current Daily Report</h4></div>
-    <div class="panel-body">
-        <a href="/DailyReport/Index" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-        <hr />
-        <div class="col-xs=12">
-            <div class="col-xs-6 DetailItem">
-                <h5>Report Date:</h5>
-                <p>@ViewBag.currentReportDate</p>
+        <div class="panel-heading col-xs-12">
+            <div class="headingElements col-xs-12">
+                <div class="col-xs-4">
+                    <a href="/DailyReport/Index/" class="btn btn-default btn-sm">
+                        <span class="glyphicon glyphicon-menu-left"></span> Back
+                    </a>
+                </div>
+                <span class="headingText col-xs-4">Pictures</span>
             </div>
-            <div class="col-xs-6 DetailItem">
-                <h5>
-                    Report Summary:
-                </h5>
-                <p>@ViewBag.currentReportSummary</p>
+        </div>
+
+        <div class="panel-body">
+            <div class="col-xs=12">
+                <div class="col-xs-6 DetailItem">
+                    <h5>Report Date:</h5>
+                    <p>@ViewBag.currentReportDate</p>
+                </div>
+                <div class="col-xs-6 DetailItem">
+                    <h5>
+                        Report Summary:
+                    </h5>
+                    <p>@ViewBag.currentReportSummary</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4>Pictures</h4>
-    </div>
-    <div class="panel-body">
-        <a href="/DailyReport/CreatePicture/@ViewBag.CurrentDailyReportId" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Picture</a>
-        <hr />
-
-        <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
-            <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
-            <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
-            <a id="LinkButton3" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span> View</a>
+    <div class="panel panel-default panelShadow">
+        <div class="panel-heading col-xs-12">
+            <div class="headingElements col-xs-12">
+                <div class="col-xs-4">
+                    <a href="/DailyReport/CreatePicture/@ViewBag.CurrentDailyReportId" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Picture</a>
+                </div>
+                <span class="headingText col-xs-4">Pictures</span>
+            </div>
         </div>
 
-        <table id="table_id" class="display">
-            <thead>
-                <tr>
-                    <th>Description</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var picture in Model)
-                {
-                    <tr class="LinkButton" data-link-button-1="/DailyReport/PictureEdit/@picture.DailyReportPictureId" data-link-button-2="/DailyReport/PictureDelete/@picture.DailyReportPictureId"
-                             data-link-button-3="/DailyReport/ViewAttachment/@picture.DailyReportPictureId">
-                        <td>@picture.Description</td>
+        <div class="panel-body">
+
+            <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
+                <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+                <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                <a id="LinkButton3" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span> View</a>
+            </div>
+
+            <table id="table_id" class="display">
+                <thead>
+                    <tr>
+                        <th>Description</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var picture in Model)
+                    {
+                        <tr class="LinkButton" data-link-button-1="/DailyReport/PictureEdit/@picture.DailyReportPictureId" data-link-button-2="/DailyReport/PictureDelete/@picture.DailyReportPictureId"
+                            data-link-button-3="/DailyReport/ViewAttachment/@picture.DailyReportPictureId">
+                            <td>@picture.Description</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
