--- a/PCA/PCA/Views/DailyReport/WorkDetail.cshtml
+++ b/PCA/PCA/Views/DailyReport/WorkDetail.cshtml
@@ -5,10 +5,18 @@
     ViewBag.PanelTitle = "Work Performed Detail";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-<a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+
+@section headerLeft
+{
+    <a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+}
+@section sideNavDailyReport
+{
+    sideNavItemSelected
+}
 
 <div>
-    <hr />
+    <br /><br /><br />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Contractors.Name)
