--- a/PCA/PCA/Views/DailyReport/WorkEdit.cshtml
+++ b/PCA/PCA/Views/DailyReport/WorkEdit.cshtml
@@ -5,26 +5,28 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
+@section headerLeft
+{
+    <a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default">Back</a>
+}
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
     <div class="form-horizontal">
-
-        <a href="/DailyReport/Detail/@Model.DailyReportId" class="btn btn-default">Back</a>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.WorkItemId)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DailyReportId, "DailyReport", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("DailyReportId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DailyReportId, "", new { @class = "text-danger" })
-            </div>
+        @Html.HiddenFor(model => model.DailyReportId)
+        @*
+    <div class="form-group">
+        @Html.LabelFor(model => model.DailyReportId, "DailyReport", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("DailyReportId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.DailyReportId, "", new { @class = "text-danger" })
         </div>
+    </div>*@
+        <br /><br /><br />
 
         <div class="form-group">
             @Html.LabelFor(model => model.ContractorId, "Contractor", htmlAttributes: new { @class = "control-label col-md-2" })
