--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -74,7 +74,7 @@
 </div>
 
 
-<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
+<div class="panel panel-default panelShadow col-md-4 col-md-offset-1">
     <div class="panel-heading">
         <h4>Links</h4>
     </div>
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
+<div class="panel panel-default panelShadow col-md-4 col-md-offset-1">
     <div class="panel-heading">
         <h4>Change Log</h4>
     </div>
