--- a/PCA/PCA/Views/Dashboard/Select.cshtml
+++ b/PCA/PCA/Views/Dashboard/Select.cshtml
@@ -7,15 +7,32 @@
 
 <h2>Index</h2>
 
-@foreach (var project in Model)
-{
-    <div class="panel panel-default">
-        <div class="panel-heading">[@project.ProjectId] @project.Name</div>
-        <div class="panel-body"><a href="/Dashboard/Index/@project.ProjectId">[Project Information Here]</a></div>
-    </div>
-}
-<div class="panel panel-default">
-    <div class="panel-heading">Admin</div>
-    <div class="panel-body"><a href="/Contractors/">Admin Links Here</a></div>
+<row>
+    <div class="col-xs-12">
+        @foreach (var project in Model)
+        {
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default panelShadow col-md-8 col-md-offset-2 col-xs-12">
+                    <div class="panel-heading col-xs-12">
+                        <div class="headingElements col-xs-12">
+                            <span class="col-xs-4">
+                            </span>
+                            <span class="headingText col-xs-4">@project.Name</span>
+                        </div>
+                    </div>
 
+                    <div class="panel-body">
+                        <a href="/Dashboard/Index/@project.ProjectId">[Project Information Here]</a>
+
+                    </div>
+                </div>
+            </div>
+        }
+
+    <div class="panel panel-default panelShadow col-xs-12">
+        <div class="panel-heading">Admin</div>
+        <div class="panel-body"><a href="/Contractors/">Admin Links Here</a></div>
+    </div>
 </div>
+</row>
+
