--- a/PCA/PCA/Views/Invoice/Delete.cshtml
+++ b/PCA/PCA/Views/Invoice/Delete.cshtml
@@ -9,9 +9,11 @@
 {
     sideNavItemSelected
 }
-
-<a href="/Invoice/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-<hr />
+@section headerLeft
+{
+    <a href="/Invoice/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+}
+<br /><br />
 <h3>Are you sure you want to delete this?</h3>
 <div>
 
