--- a/PCA/PCA/Views/Invoice/Index.cshtml
+++ b/PCA/PCA/Views/Invoice/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PCA.Models.Invoice>
+﻿@model IEnumerable<PCA.ViewModels.InvoiceIndexViewModel>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,29 +14,56 @@
 }
 
 <div class="col-xs-12 col-md-7">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4>Invoices</h4>
+    <div class="panel panel-default panelShadow">
+        <div class="panel-heading col-xs-12">
+            <div class="headingElements col-xs-12">
+                <div class="col-xs-4">
+                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
+                </div>
+                <span class="headingText col-xs-4">Invoices</span>
+                <div class="headingRight col-xs-4">
+                    <a href="/Invoice/Create" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus-sign"></span> New</a>
+                </div>
+            </div>
         </div>
-        <div class="panel-body">
 
-            <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
-            <a href="/Invoice/Create" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Create Invoice</a>
+        <div class="panel-body">
+            <br />
+            <br />
+            <br />
+
+            <!-- Filters -->
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle btn-sm" type="button" id="dailyReportDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Status: <span id="selection">All</span>
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li class="dailyReportStatusFilter"><a href="#">All</a></li>
+                    <li class="dailyReportStatusFilter"><a href="#">Pending</a></li>
+                    <li class="dailyReportStatusFilter"><a href="#">Approved</a></li>
+                    <li class="dailyReportStatusFilter"><a href="#">Released</a></li>
+                    <li class="dailyReportStatusFilter"><a href="#">Posted</a></li>
+                </ul>
+            </div>
+
             <hr />
 
-            <div id="LinkButtonGroup" class="btn-group col-xs-12" role="group" aria-label="...">
-                <a id="LinkButton1" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span> Info</a>
-                <a id="LinkButton2" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
-                <a id="LinkButton3" href="" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete</a>
-                <a id="LinkButton4" href="" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-picture"></span> View</a>
+            <div id="LinkButtonGroup" class="col-xs-12" role="group" aria-label="...">
+                <a id="LinkButton1" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-info-sign"></span> Info</a>
+                <a id="LinkButton2" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+                <a id="LinkButton3" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                <a id="LinkButton4" href="" type="button" class="btn btn-default btn-sm" target="_blank"><span class="glyphicon glyphicon-picture"></span> View</a>
+                <a id="LinkButton5" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-usd"></span> Payments</a>
+                <a id="LinkButton6" href="" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-sort"></span> Workflow</a>
             </div>
 
             <table id="table_id" class="display">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Total</th>
                         <th>Date</th>
+                        <th>Contractor</th>
+                        <th>Total</th>
                         <th>Status</th>
                     </tr>
                 </thead>
@@ -45,10 +72,10 @@
             {
                         <tr class="LinkButton" data-link-button-1="/Invoice/Details/@inv.InvoiceId" data-link-button-2="/Invoice/Edit/@inv.InvoiceId"
                             data-link-button-3="/Invoice/Delete/@inv.InvoiceId" data-link-button-4="/Invoice/ViewAttachment/@inv.InvoiceId">
-                            <td>@inv.InvoiceId</td>
-                            <td>@string.Format("{0:C}", @inv.TotalAmount)</td>
-                            <td>@inv.DateOfInvoice</td>
-                            <td>@inv.Status</td>
+                            <td>@inv.InvoiceDate</td>
+                            <td>@inv.ContractorName</td>
+                            <td>@string.Format("{0:C}", @inv.InvoiceTotal)</td>
+                            <td>@inv.InvoiceStatus</td>
                         </tr>
                     }
 
@@ -60,7 +87,7 @@
     </div>
 </div>
 
-<div class="panel panel-default col-xs-12 col-md-4 col-md-offset-1">
+<div class="panel panel-default panelShadow col-xs-12 col-md-4 col-md-offset-1">
     <div class="panel-heading">
         <h4>Analytics</h4>
     </div>
