--- a/PCA/PCA/Views/Shared/_LayoutEmpty.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutEmpty.cshtml
@@ -9,6 +9,8 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("css", false)
+    <link href="~/Content/Layout.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Cabin" rel="stylesheet">
 
 
 </head>
@@ -17,7 +19,7 @@
 <body>
 
     <div id="content">
-        <div class="container body-content">
+        <div class="container-fluid body-content">
             @RenderBody()
         </div>
 
